data/exec-logs/github/toramky_automobile-dataset/auto-imports-beginner-level-analysis.exec.log
  File "auto-imports-beginner-level-analysis.py", line 162
    imp = SimpleImputer(missing_values='NaN', strategy=""constant"")
                                                                ^
SyntaxError: invalid syntax
